@@ -1,6 +1,14 @@
 2012-04-03  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
+	2012-03-15  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/52580
+	* gfortran.dg/vect/pr52580.f: New testcase.
+
+2012-04-03  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline
 	2012-03-06  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/52493
